# near-portfolio-manager

./: .gitignore  README.md  package.json
agent/: build.zsh  run.zsh
agent/src/: agent.py
contracts/proxy/: Cargo.toml
contracts/proxy/src/: lib.rs  utils.rs  views.rs
contracts/proxy/src/models/: contract.rs  key_info.rs  mod.rs  portfolio.rs  users.rs
contracts/proxy/src/models/intents/: mod.rs  token_diff.rs  tokens.rs
contracts/proxy/src/modules/: assign_portfolio.rs  balance_portfolio.rs  create_portfolio.rs  mod.rs  request_signature.rs  withdraw_funds.rs
cron-job/: package.json
cron-job/src/: index.js
frontend/: .gitignore  .global.d.ts  docker-compose.yml  dockerfile  inngest.json  package.json  tsconfig.json
frontend/prisma/: dev.db  dev.db-journal  schema.prisma
frontend/prisma/migrations/20250216024054_update_user_authenticator/: migration.sql
frontend/src/components/: AuthenticatedDashboard.tsx  Login.tsx  Register.tsx  Toast.tsx
frontend/src/components/Dashboard/: BuyBundleModal.tsx  BuyBundlesSection.tsx  DashboardHeader.tsx  PortfolioBalancer.tsx  TransactionHistory.tsx
frontend/src/constants/: tokens.ts
frontend/src/context/: AuthContext.tsx  BalanceContext.tsx  JobContext.tsx  PriceContext.tsx
frontend/src/inngest/: events.ts  index.ts
frontend/src/modals/: DepositModal.tsx  LoginModal.tsx
frontend/src/pages/: _app.tsx  index.tsx
frontend/src/types/: tokens.ts
frontend/src/utils/: challenges.ts  sessions.ts  typeGuards.ts
scripts/: deployContract.ts
scripts/utils/: deploy.ts  deploymentUtils.ts
(+48 files in other folders)
